Prevent POI image from vertically overflowing too much (#395)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -49,6 +49,12 @@ body {
   grid-area: info;
 }
 
+.poi_image_container {
+  width: 100%;
+  max-height: 75vh;
+  overflow-y: auto;
+}
+
 .poi_image {
   width: 100%;
   height: auto;
